syntax/tests/parsing/errors/typeDef/typeDef.js
type rec stack
  | Empty

// missing type
type t =

// missing type
type state =
